<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/CardView.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20px"
            android:stretchColumns="1"
            tools:layout_editor_absoluteX="-133dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/negroClaro">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100px"
                    android:layout_span="2"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/titulo"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="202dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/dni"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/phone"
                    android:inputType="phone" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60px"
                android:background="@color/negroClaro">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="100px"
                    android:layout_span="2"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/titulo2"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60px">

                <EditText
                    android:id="@+id/fecha"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/fecha"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/personas"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/alegreya"
                    android:hint="@string/personas"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/comentario"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_span="2"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:hint="@string/comentario"
                    android:inputType="textMultiLine" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30px">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/botonFormulario"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:background="@color/negroClaro"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/botonFormulario"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>