<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/Comentario"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:theme="@style/CardView.Dark"
        http:layout_constraintEnd_toEndOf="parent"
        http:layout_constraintStart_toStartOf="parent"
        http:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#FFFFFF"
            tools:layout_editor_absoluteY="124dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="112dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="top|left|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/medios"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/autobuses"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/urlautobuses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|top|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/urlautobuses"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/urltaxis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|top|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/urltaxis"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/taxis"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="328dp"
                android:layout_height="300dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"


                    tools:context=".Localizar" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="193dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/alegreya"
                    android:gravity="center"
                    android:text="@string/sitios"
                    android:textColor="#131313"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/Playa1"
                    android:textColor="#191919" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/distancia1"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/distancia2"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/distancia3"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/Playa2"
                    android:textColor="#040404" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="@font/alegreya"
                    android:text="@string/Playa3"
                    android:textColor="#000000" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>