<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/CardView.Dark"
        http:layout_constraintEnd_toEndOf="parent"
        http:layout_constraintStart_toStartOf="parent"
        http:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="66dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="332dp"
        android:stretchColumns="1"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout4"
        http:layout_constraintBottom_toBottomOf="parent"
        http:layout_constraintEnd_toEndOf="parent"
        http:layout_constraintHorizontal_bias="0.0"
        http:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/negroClaro">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100px"
                android:layout_span="2"
                android:fontFamily="@font/alegreya"
                android:gravity="center"
                android:text="@string/Modificar"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="40px"
                android:text="@string/Nombre" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:fontFamily="@font/alegreya"
                android:hint="@string/name"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:paddingTop="40px"
                android:text="@string/Personas" />

            <EditText
                android:id="@+id/personas"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:fontFamily="@font/alegreya"
                android:hint="@string/name"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40px"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:fontFamily="@font/alegreya"
                android:hint="@string/name"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40px"
                android:text="@string/Comentario" />

            <EditText
                android:id="@+id/comentario"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:fontFamily="@font/alegreya"
                android:hint="@string/name"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="120dp"
            android:paddingTop="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonVolver"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:text="@string/modButton" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>